--- a/app/static/app/partials/room_index.html
+++ b/app/static/app/partials/room_index.html
@@ -3,35 +3,46 @@
 
         <div class="tabs-left">
             <ul class="nav nav-tabs">
-                <li class="active" ng-repeat="room in rooms"><a data-toggle="tab" href="#tab-6">{{ room.name }}</a></li>
+                <li ng-repeat="room in rooms" ng-attr-class="{{room.id==current_id && 'active' || '' }}"><a data-toggle="tab" ng-click="set_current_room(room.id)">{{ room.name }}</a></li>
             </ul>
             <div class="tab-content ">
-                <div id="tab-6" class="tab-pane active">
+                <div class="tab-pane active">
                     <div class="panel-body">
-                        <strong>Lorem ipsum dolor sit amet, consectetuer adipiscing</strong>
 
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
-                            spring which I enjoy with my whole heart. I am alone, and feel the charm of
-                            existence in this spot, which was created for the bliss of souls like mine.</p>
+                        <div class="row">
 
-                        <p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence,
-                            that I neglect my talents. I should be incapable of drawing a single stroke at
-                            the present moment; and yet I feel that I never was a greater artist than now. When.</p>
-                    </div>
-                </div>
-                <div id="tab-7" class="tab-pane">
-                    <div class="panel-body">
-                        <strong>Donec quam felis</strong>
+                            <div class="col-md-12 ">
+                                <div class="chat-discussion">
 
-                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little world among the
-                            stalks, and grow familiar with the countless indescribable forms of the insects
-                            and flies, then I feel the presence of the Almighty, who formed us in his own image, and the
-                            breath </p>
+                                    <div class="chat-message left" ng-repeat="message in messages">
+                                        <img class="message-avatar" src="https://www.placecage.com/c/100/100" alt="" >
+                                        <div class="message">
+                                            <a class="message-author" href="#"> {{ message.author }} </a>
+											<span class="message-date"> Mon Jan 26 2015 - 18:39:23 </span>
+                                            <span class="message-content">
+											    {{ message.text }}
+                                            </span>
+                                        </div>
+                                    </div>
 
-                        <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of
-                            souls like mine. I am so happy, my dear friend, so absorbed in the exquisite
-                            sense of mere tranquil existence, that I neglect my talents. I should be incapable of
-                            drawing a single stroke at the present moment; and yet.</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="chat-message-form">
+
+                                    <div class="form-group">
+
+                                        <textarea class="form-control message-input" name="message" placeholder="Enter message text"></textarea>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
