--- a/app/static/admin/css/style.css
+++ b/app/static/admin/css/style.css
@@ -6594,10 +6594,10 @@ body.landing-page {
   width: 100%;
 }
 .landing-page .header-back.one {
-  background: url('../img/landing/header_one.jpg') 50% 0 no-repeat;
+  background: url('/static/landing/img/big1.jpg') 50% 0 no-repeat;
 }
 .landing-page .header-back.two {
-  background: url('../img/landing/header_two.jpg') 50% 0 no-repeat;
+  background: url('/static/landing/img/big2.jpg') 50% 0 no-repeat;
 }
 .landing-page .carousel {
   height: 470px;
