--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,6 +42,7 @@
                         <li><a class="page-scroll" href="#pricing">Pricing</a></li>
                         <li><a class="page-scroll" href="#contact">Contact</a></li>
                         
+                            <li><a class="page-scroll" href="/register">Register</a></li>
                             <li><a class="page-scroll" href="/login">Log In</a></li>
                         
                     </ul>
@@ -58,18 +59,13 @@
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>We craft<br/>
-                        brands, web apps,<br/>
-                        and user interfaces<br/>
-                        we are IN+ studio</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <h1 style="color: black">Interactive<br/>
+                        Q&amp;A sessions<br/>
+                        with Kontakt.io beacons<br/>
+                        and mobile apps</h1>
                     <p>
-                        <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-                        <a class="caption-link" href="#" role="button">Inspinia Theme</a>
+                        <a class="btn btn-lg btn-primary" href="#ficzers" role="button">READ MORE</a>
                     </p>
-                </div>
-                <div class="carousel-image wow zoomIn">
-                    <img src="img/landing/laptop.png" alt="laptop"/>
                 </div>
             </div>
             <!-- Set background for slide in css -->
@@ -78,10 +74,14 @@
         </div>
         <div class="item">
             <div class="container">
-                <div class="carousel-caption blank">
-                    <h1>We create meaningful <br/> interfaces that inspire.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                <div class="carousel-caption">
+                    <h1>Interactive<br/>
+                        Q&amp;A sessions<br/>
+                        with Kontakt.io beacons<br/>
+                        and mobile apps</h1>
+                    <p>
+                        <a class="btn btn-lg btn-primary" href="#ficzers" role="button">READ MORE</a>
+                    </p>
                 </div>
             </div>
             <!-- Set background for slide in css -->
@@ -100,40 +100,39 @@
 
 
 
-<section  class="container features">
+<section id="ficzers" class="container features">
     <div class="row">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1>Over 40+ unique view<br/> <span class="navy"> with many custom components</span> </h1>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
+            <h1>Enrich your event experience<br/> <span class="navy"> with groundbreaking iBeacon Technology</span> </h1>
         </div>
     </div>
     <div class="row">
         <div class="col-md-3 text-center wow fadeInLeft">
             <div>
                 <i class="fa fa-mobile features-icon"></i>
-                <h2>Full responsive</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
+                <h2>Powerful mobile apps</h2>
+                <p>iBeacon based context awareness and authentication provides ultimate experience to attendees of your event</p>
             </div>
             <div class="m-t-lg">
                 <i class="fa fa-bar-chart features-icon"></i>
-                <h2>6 Charts Library</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
+                <h2>Measure everything</h2>
+                <p>Get instant access to complex analytics tools including heatmaps, networking frequency and lecture attendance data</p>
             </div>
         </div>
         <div class="col-md-6 text-center  wow zoomIn">
-            <img src="img/landing/perspective.png" alt="dashboard" class="img-responsive">
+            <img src="/static/landing/img/dashboard.png" alt="dashboard" class="img-responsive">
         </div>
         <div class="col-md-3 text-center wow fadeInRight">
             <div>
-                <i class="fa fa-envelope features-icon"></i>
-                <h2>Mail pages</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
+                <i class="fa fa-question features-icon"></i>
+                <h2>Interactive Q&amp;A sessions</h2>
+                <p>Give your users chance to engage in lecture more deeply </p>
             </div>
             <div class="m-t-lg">
-                <i class="fa fa-google features-icon"></i>
-                <h2>AngularJS version</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
+                <i class="fa fa-users features-icon"></i>
+                <h2>Enable networking</h2>
+                <p>Let your attendees communicate with each other thanks to iBeacon proximity features</p>
             </div>
         </div>
     </div>
@@ -153,7 +152,7 @@
                 <div class="team-member">
                     <img src="/static/landing/img/drabo.png" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">Michał</span> Drabik</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus. </p>
+                    <p>Android ninja with 12 year of experience. Java is a deadly weapon and he knows how to use it properly. In his free time he saves small kittens.</p>
                     <ul class="list-inline social-icon">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -168,7 +167,7 @@
                 <div class="team-member wow zoomIn">
                     <img src="/static/landing/img/koszal.png" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">Paweł</span> Ogorzałek</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
+                    <p>Front-end superhero with 4.5 hours of experience. Yesterday, he thought that Angular is expensive seafood, today Facebook and Google are fighting to sign him in.</p>
                     <ul class="list-inline social-icon">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -183,7 +182,7 @@
                 <div class="team-member wow zoomIn">
                     <img src="/static/landing/img/kamil.png" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">Kamil</span> Rogalski</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
+                    <p>Messi of backend development. He would kill with CLI tools only. He is for death penalty for exceeding 80 chars limit in one line.</p>
                     <ul class="list-inline social-icon">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -198,7 +197,7 @@
                 <div class="team-member">
                     <img src="/static/landing/img/wojdan.png" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">Bartek</span> Wojdan</h4>
-                    <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
+                    <p>Apple is dead, everyone knows that. Despite that, Bartek is trying hard to bring this platform back to life. No success so far.</p>
                     <ul class="list-inline social-icon">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -304,54 +303,13 @@
     </div>
 
 </section>
-
-<section class="features">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="navy-line"></div>
-                <h1>More and more extra great feautres</h1>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-5 col-lg-offset-1 features-text">
-                <small>INSPINIA</small>
-                <h2>Perfectly designed </h2>
-                <i class="fa fa-bar-chart big-icon pull-right"></i>
-                <p>INSPINIA Admin Theme is a premium admin dashboard template with flat design concept. It is fully responsive admin dashboard template built with Bootstrap 3+ Framework, HTML5 and CSS3, Media query. It has a huge collection of reusable UI components and integrated with.</p>
-            </div>
-            <div class="col-lg-5 features-text">
-                <small>INSPINIA</small>
-                <h2>Perfectly designed </h2>
-                <i class="fa fa-bolt big-icon pull-right"></i>
-                <p>INSPINIA Admin Theme is a premium admin dashboard template with flat design concept. It is fully responsive admin dashboard template built with Bootstrap 3+ Framework, HTML5 and CSS3, Media query. It has a huge collection of reusable UI components and integrated with.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-5 col-lg-offset-1 features-text">
-                <small>INSPINIA</small>
-                <h2>Perfectly designed </h2>
-                <i class="fa fa-clock-o big-icon pull-right"></i>
-                <p>INSPINIA Admin Theme is a premium admin dashboard template with flat design concept. It is fully responsive admin dashboard template built with Bootstrap 3+ Framework, HTML5 and CSS3, Media query. It has a huge collection of reusable UI components and integrated with.</p>
-            </div>
-            <div class="col-lg-5 features-text">
-                <small>INSPINIA</small>
-                <h2>Perfectly designed </h2>
-                <i class="fa fa-users big-icon pull-right"></i>
-                <p>INSPINIA Admin Theme is a premium admin dashboard template with flat design concept. It is fully responsive admin dashboard template built with Bootstrap 3+ Framework, HTML5 and CSS3, Media query. It has a huge collection of reusable UI components and integrated with.</p>
-            </div>
-        </div>
-    </div>
-
-</section>
 <section id="pricing" class="pricing">
     <div class="container">
         <div class="row m-b-lg">
             <div class="col-lg-12 text-center">
                 <div class="navy-line"></div>
                 <h1>App Pricing</h1>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                <p>The best thing about beta is that it is completely free.</p>
             </div>
         </div>
         <div class="row">
@@ -361,28 +319,31 @@
                         Basic
                     </li>
                     <li class="pricing-desc">
-                        Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
+                        Our only plan for now.
                     </li>
                     <li class="pricing-price">
-                        <span>$16</span> / month
+                        <span>$20.00</span> / month
                     </li>
                     <li>
                         Dashboards
                     </li>
                     <li>
-                        Projects view
+                        Rooms
                     </li>
                     <li>
-                        Contacts
+                        Q&amp;A Sessions
                     </li>
                     <li>
-                        Calendar
+                        Networking
                     </li>
                     <li>
-                        AngularJs
+                        Speakers Panel
                     </li>
                     <li>
-                        <a class="btn btn-primary btn-xs" href="#">Signup</a>
+                        <strong>24/7 Support</strong>
+                    </li>
+                    <li>
+                        <a class="btn btn-primary btn-xs disabled" href="#">Signup</a>
                     </li>
                 </ul>
             </div>
@@ -390,31 +351,31 @@
             <div class="col-lg-4 wow zoomIn">
                 <ul class="pricing-plan list-unstyled selected">
                     <li class="pricing-title">
-                        Standard
+                        Beta
                     </li>
                     <li class="pricing-desc">
-                        Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
+                        Our only plan for now.
                     </li>
                     <li class="pricing-price">
-                        <span>$22</span> / month
+                        <span>$0.00</span> / month
                     </li>
                     <li>
                         Dashboards
                     </li>
                     <li>
-                        Projects view
+                        Rooms
                     </li>
                     <li>
-                        Contacts
+                        Q&amp;A Sessions
                     </li>
                     <li>
-                        Calendar
+                        Networking
                     </li>
                     <li>
-                        AngularJs
+                        Speakers Panel
                     </li>
                     <li>
-                        <strong>Support platform</strong>
+                        <strong>24/7 Support</strong>
                     </li>
                     <li class="plan-action">
                         <a class="btn btn-primary btn-xs" href="#">Signup</a>
@@ -428,35 +389,38 @@
                         Premium
                     </li>
                     <li class="pricing-desc">
-                        Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.
+                        Our only plan for now.
                     </li>
                     <li class="pricing-price">
-                        <span>$160</span> / month
+                        <span>$100,000,000.00</span> / month
                     </li>
                     <li>
                         Dashboards
                     </li>
                     <li>
-                        Projects view
+                        Rooms
                     </li>
                     <li>
-                        Contacts
+                        Q&amp;A Sessions
                     </li>
                     <li>
-                        Calendar
+                        Networking
                     </li>
                     <li>
-                        AngularJs
+                        Speakers Panel
                     </li>
                     <li>
-                        <a class="btn btn-primary btn-xs" href="#">Signup</a>
+                        <strong>24/7 Support</strong>
+                    </li>
+                    <li>
+                        <a class="btn btn-primary btn-xs disabled" href="#">Signup</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="row m-t-lg">
             <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg">
-                <p>*Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. <span class="navy">Various versions</span>  have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                <p>Are you ready for iBeacon world?</p>
             </div>
         </div>
     </div>
@@ -469,27 +433,12 @@
             <div class="col-lg-12 text-center">
                 <div class="navy-line"></div>
                 <h1>Contact Us</h1>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
-            </div>
-        </div>
-        <div class="row m-b-lg">
-            <div class="col-lg-3 col-lg-offset-3">
-                <address>
-                    <strong><span class="navy">Company name, Inc.</span></strong><br/>
-                    795 Folsom Ave, Suite 600<br/>
-                    San Francisco, CA 94107<br/>
-                    <abbr title="Phone">P:</abbr> (123) 456-7890
-                </address>
-            </div>
-            <div class="col-lg-4">
-                <p class="text-color">
-                    Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
-                </p>
+                <p>Send us an email or something.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
-                <a href="mailto:test@email.com" class="btn btn-primary">Send us mail</a>
+                <a href="mailto:lt.koszal@gmail.com" class="btn btn-primary">Send us mail</a>
                 <p class="m-t-sm">
                     Or follow us on social platform
                 </p>
@@ -505,7 +454,7 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                <p><strong>&copy; 2015 Company Name</strong><br/> consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <p><strong>&copy; 2015 Gabbie</strong><br/>. All rights reserved.</p>
             </div>
         </div>
     </div>
