--- a/app/static/app/partials/room_index.html
+++ b/app/static/app/partials/room_index.html
@@ -30,15 +30,17 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-lg-10">
                                 <div class="chat-message-form">
 
                                     <div class="form-group">
-
-                                        <textarea class="form-control message-input" name="message" placeholder="Enter message text"></textarea>
+                                        <input type="text" class="form-control" name="message" ng-model="new_message.text" placeholder="Enter message text"/>
                                     </div>
 
                                 </div>
+                            </div>
+                            <div class="col-lg-2">
+                                <button class="btn btn-success" ng-click="send_message(current_id)">SEND</button>
                             </div>
                         </div>
 
