--- a/app/templates/panel/index.html
+++ b/app/templates/panel/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Dashboard v.4</title>
+    <title>Gabbie Dashboard</title>
 
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/admin/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -26,19 +26,9 @@
                 <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                     <i class="fa fa-reorder"></i>
                 </button>
-                <a href="#" class="navbar-brand">Inspinia</a>
+                <a href="#" class="navbar-brand">Gabbie</a>
             </div>
             <div class="navbar-collapse collapse" id="navbar">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Coders Mill <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Coders Mill</a></li>
-                            <li><a href="">Proidea</a></li>
-                            <li><a href="">Eventory</a></li>
-                        </ul>
-                    </li>
-                </ul>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
                         <a href="/logout">
@@ -70,11 +60,8 @@
         </div>
 
         <div class="footer">
-            <div class="pull-right">
-                10GB of <strong>250GB</strong> Free.
-            </div>
             <div>
-                <strong>Copyright</strong> Example Company &copy; 2014-2015
+                <strong>Copyright</strong> Gabbie &copy; 2014-2015
             </div>
         </div>
 
